Progress with socials

--- a/styles.css
+++ b/styles.css
@@ -1,81 +1,170 @@
 * {
-  font-family: sans-serif;
+ font-style: bold;
+ font-family: Verdana, Geneva, Tahoma, sans-serif;
+ margin: 0;
+ padding: 0;
+}
+  
+  /* The navigation bar */
+.navbar {
+  overflow: hidden;
+  position: relative;
+  width: 100%; 
+  background-color: rgb(19, 61, 19);
+}
+
+/* Links inside the navbar */
+.navbar a {
+  float: left;
+  display: block;
+  color: whitesmoke;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.navbar a:hover {
+  background: rgb(89, 202, 89);
 }
 
 body {
-  height: 100%;
+  background: linear-gradient(to bottom, #082307 0%, #919491 100%), rgb(216, 220, 217);
   width: 100%;
-  background: conic-gradient(
-    rgb(132, 190, 96) 90deg, whitesmoke 90deg 180deg,  lightgray 135deg, rgb(132, 190, 96) 180deg 270deg, whitesmoke 270deg 
-);
-  background-repeat: repeat ;
-  background-size: 80px 80px;
-  background-position: top left;
+  height: 100vh;
 }
 
-.top-bar {
-  height: 50px;
-  width: 100%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 100;
-  background: rgb(169, 226, 125);
-  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
+.row {
   display: flex;
-  align-items: center;
+  flex-wrap: wrap;
   justify-content: center;
+  align-items: center;
 }
 
-.top-bar ul {
-  display: flex;
-  list-style-type: none;
+.image {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+/* Columns that sit next to each other */
+.column {
+  flex: 25%;
+  max-width: 25%;
+  padding: 0 4px;
+}
+
+.column img {
+  max-width: 100%;
+}
+
+.container {
+  position: relative;
+  text-align: center;
+  color: white;
+  margin: 10px;
+}
+
+.image-container {
+  position: relative;
+  display: inline-block;
+}
+
+.container img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+.text-overlay {
+  position: absolute;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0);
+  color: #fff;
+  padding: 10px;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.text-overlay h1,
+.text-overlay p {
   margin: 0;
   padding: 0;
-  justify-content: center;
-  width: 100%;
-  align-items: center;
 }
 
-.top-bar li {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 20%; 
-  padding-right: 100px;
+.text-overlay.bottom-right {
+  bottom: 0;
+  right: 0;
+  left: auto;
 }
 
-.top-bar li a {
-  padding: 10px 20px;
-  text-decoration: none;
-  background-color: transparent;
-  color: black;
-  text-align: center;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.text-overlay.top-left {
+  top: 0;
+  left: 0;
+  bottom: auto;
 }
 
-.top-bar li a:hover {
-  background-color: beige;
-  color: black;
+.text-overlay.top-right {
+  top: 0;
+  right: 0;
+  left: auto;
+  bottom: auto;
 }
 
-.my-list {
-  list-style-type: none;
-    
+.bottom-left {
+  position: absolute;
+  bottom: 8px;
+  left: 16px;
 }
 
-ul {
-  list-style-type: none;
-}
-
-.mySlides img {
+.socialcontainer {
   display: block;
-  margin: 0 auto;
-  max-width: 50%; /* or any other value you prefer */
-  border: 15px solid rgb(140, 211, 121); /* or any other color and size you prefer */
-  box-sizing: border-box; 
-  border-radius: 3rem;
-  box-shadow: 10px 10px 10px rgba(0,0,0,0.5); /* add this line to create a shadow effect */
 }
+
+.fa {
+  margin-right: 10px;
+}
+
+#facebook, #instagram, #twitter, #github {
+  font-size: 8em;
+  padding: 10px 20px;
+  margin: 0 40px;
+  background:rgb(89, 202, 89);
+  color: white;
+  border-radius: 30px;
+  box-shadow: 2px 2px 2px #919491,
+              10px 10px 12px #919491,
+              inset 2px 2px 10px #919491,
+              inset 2px 2px 10px #919491,
+              inset 2px 2px 10px #919491,
+              inset 2px 2px 10px #919491,
+  text-shadow: 0px 0px 50px #082307,
+               0px 0px 100px #082307,
+               0px 0px 150px #082307,            
+               0px 0px 200px #082307,
+  animation: animate 3s linear infinite;
+}
+
+@keyframes animate {
+  from {
+    filter: hue-rotate(0deg);
+  }
+  to {
+    filter: hue-rotate(360deg);
+  }
+}
+
+#twitter {
+  animation-delay: 0.3s,
+}
+
+#facebook {
+  animation-delay: 0.3s,
+}
+
+#instagram {
+  animation-delay: 0.3s,
+}
+
+#github {
+  animation-delay: 0.3s,
+}
+
