--- a/styles.css
+++ b/styles.css
@@ -1,43 +1,57 @@
 * {
- font-style: bold;
- font-family: Verdana, Geneva, Tahoma, sans-serif;
- margin: 0;
- padding: 0;
-}
+  font-style: bold;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  margin: 0;
+  padding: 0;
   
-  /* The navigation bar */
-.navbar {
-  overflow: hidden;
-  position: relative;
-  width: 100%; 
-  background-color: rgb(19, 61, 19);
 }
 
-/* Links inside the navbar */
-.navbar a {
+.tablink {
+  background-color: #555;
+  color: white;
   float: left;
-  display: block;
-  color: whitesmoke;
-  text-align: center;
+  border: none;
+  outline: none;
+  cursor: pointer;
   padding: 14px 16px;
-  text-decoration: none;
+  font-size: 17px;
+  width: 25%;
 }
 
-.navbar a:hover {
-  background: rgb(89, 202, 89);
+.tablink:hover {
+  background-color: #777;
+}
+
+.tabcontent {
+  display: none;
+  text-align: center;
 }
 
 body {
-  background: linear-gradient(to bottom, #082307 0%, #919491 100%), rgb(216, 220, 217);
   width: 100%;
   height: 100vh;
 }
 
+.container {
+  position: relative;
+  text-align: center;
+  color: white;
+  margin: auto 0;
+  width: 100%;
+  padding-top: 5px;
+}
+
+.container img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
 .row {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 1rem;
+
 }
 
 .image {
@@ -46,34 +60,40 @@ body {
   height: auto;
 }
 
-/* Columns that sit next to each other */
+Columns that sit next to each other
 .column {
-  flex: 25%;
-  max-width: 25%;
-  padding: 0 4px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 0.2rem;
+  margin: 0;
+  padding: 0;
+
 }
 
 .column img {
-  max-width: 100%;
-}
-
-.container {
-  position: relative;
-  text-align: center;
-  color: white;
-  margin: 10px;
+  margin-top: 8px;
+  vertical-align: middle;
+  width: 100%;
 }
 
 .image-container {
   position: relative;
   display: inline-block;
+  padding: 1px;
+  overflow: hidden;
 }
 
-.container img {
-  display: block;
+.image-container img {
+  transition: opacity 0.5s;
   width: 100%;
-  height: auto;
+  height: 100%;
+  object-fit: cover;
 }
+
+.image-container:hover img {
+  opacity: 0.5;
+}
+
 .text-overlay {
   position: absolute;
   bottom: 0;
@@ -115,56 +135,27 @@ body {
   left: 16px;
 }
 
-.socialcontainer {
-  display: block;
+.social-icon {
+  margin-left: 10px;
 }
 
-.fa {
-  margin-right: 10px;
+.social-icons a {
+  display: inline-block;
+  margin-left: 5px; 
 }
 
-#facebook, #instagram, #twitter, #github {
-  font-size: 8em;
-  padding: 10px 20px;
-  margin: 0 40px;
-  background:rgb(89, 202, 89);
-  color: white;
-  border-radius: 30px;
-  box-shadow: 2px 2px 2px #919491,
-              10px 10px 12px #919491,
-              inset 2px 2px 10px #919491,
-              inset 2px 2px 10px #919491,
-              inset 2px 2px 10px #919491,
-              inset 2px 2px 10px #919491,
-  text-shadow: 0px 0px 50px #082307,
-               0px 0px 100px #082307,
-               0px 0px 150px #082307,            
-               0px 0px 200px #082307,
-  animation: animate 3s linear infinite;
-}
-
-@keyframes animate {
-  from {
-    filter: hue-rotate(0deg);
-  }
-  to {
-    filter: hue-rotate(360deg);
+/* Responsive layout - makes a two column-layout instead of four columns */
+@media screen and (max-width: 800px) {
+  .column {
+    flex: 50%;
+    max-width: 50%;
   }
 }
 
-#twitter {
-  animation-delay: 0.3s,
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .column {
+    flex: 100%;
+    max-width: 100%;
+  }
 }
-
-#facebook {
-  animation-delay: 0.3s,
-}
-
-#instagram {
-  animation-delay: 0.3s,
-}
-
-#github {
-  animation-delay: 0.3s,
-}
-
