I added list elements. That code didn't seem very dry. I wonder if there is something I could do about it in the Hungry for More section.

--- a/hogwarts.css
+++ b/hogwarts.css
@@ -2,7 +2,10 @@ body {
     background-color: rgb(186, 200, 200);
 }
 
-#myHeading {
-    color: blue;
-    font-size: 24px;
-  }
+.secret {
+    opacity: 0.5;
+}
+
+ul {
+    list-style-type: none;
+}
